# EvoFighters

./: .gitignore  README.md  index.html  params.json  setup.py
EvoFighters/: .pylintrc  Arena.py  Creatures.py  Eval.py  Parsing.py  SaveData.py  Utils.py  banner_90.ascii
EvoFighters/scripts/: make_tree.py
evofighters_rust/: Cargo.toml
evofighters_rust/src/: arena.rs  cli.rs  creatures.rs  dna.rs  eval.rs  main.rs  parsing.rs  rng.rs  saver.rs  settings.rs  sim.rs  simplify.rs  stats.rs  util.rs
old_python_version/: setup.py
old_python_version/EvoFighters/: Arena.py  banner_51.ascii  banner_79.ascii  grammar.bnf
rust/: creatures.rs  parsing  parsing.rs
src/: arena.rs  dna.rs  sim.rs  simplify.rs  stats.rs  util.rs
tests/: basic_test.py
