[package]

name = "evofighters_rust"
version = "0.0.1"
authors = [ "Josh Kuhn <deontologician@gmail.com>" ]

[dependencies]
time = "0.1.32"
rand = "0.4"
enum_primitive = "0.1.1"
num = "0.1.41"
serde = "1.0"
serde_derive = "1.0"
bincode = "0.9"

[profile.release]
debug = false
opt-level = 3
rpath = false
lto = true

[features]
log_info = []
log_debug = []
log_trace = []

[[bin]]
name = "evofighters"
path = "src/main.rs"
