[package]

name = "evofighters_rust"
version = "0.0.1"
authors = [ "Josh Kuhn <deontologician@gmail.com>" ]

[dependencies]
clap = "2.30.0"
derive_builder = "0.5.1"
enum_primitive = "0.1.1"
lazy_static = "1.0"
num = "0.1.41"
num_cpus = "1.0.0"
rand = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
time = "0.1.32"
twox-hash = "1.1.0"
xz2 = "0.1.4"

[profile.release]
debug = true
opt-level = 3
rpath = false
lto = true

[features]
log_info = []
log_debug = []
log_trace = []

[[bin]]
name = "evofighters"
path = "src/main.rs"
